// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorEmailsAction renders multiple current emails in a dropdown 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef(InternalButton)>
        <ForwardRef
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="top"
          title="Contact author"
        >
          <ForwardRef(MailOutlined) />
        </ForwardRef>
      </ForwardRef(InternalButton)>
    }
  >
    <MenuItem
      key="dude@email.cern"
    >
      <LinkWithTargetBlank
        as="a"
        href="mailto:dude@email.cern"
      >
        dude@email.cern
      </LinkWithTargetBlank>
    </MenuItem>
    <MenuItem
      key="other-dude@email.cern"
    >
      <LinkWithTargetBlank
        as="a"
        href="mailto:other-dude@email.cern"
      >
        other-dude@email.cern
      </LinkWithTargetBlank>
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`AuthorEmailsAction renders single email 1`] = `
<UserActionWrapper>
  <LinkWithTargetBlank
    as="a"
    href="mailto:dude@email.cern"
  >
    <Tooltip
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      placement="top"
      title="Contact author"
    >
      <ForwardRef(MailOutlined) />
    </Tooltip>
  </LinkWithTargetBlank>
</UserActionWrapper>
`;
